k8s/base/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resume-frontend
  labels:
    app: resume-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: resume-frontend
  template:
    metadata:
      labels:
        app: resume-frontend
    spec:
      containers:
        - name: resume-frontend
          image: 63631052/resume-frontend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
